--- a/app/src/main/res/layout/activity_main4.xml
+++ b/app/src/main/res/layout/activity_main4.xml
@@ -160,6 +160,7 @@
                     android:layout_height="wrap_content"
                     android:backgroundTint="#00FFFFFF"
                     android:contentDescription="@string/app_name"
+                    android:onClick="onClickLeft2"
                     android:scaleType="centerCrop"
                     android:src="@drawable/left" />
             </LinearLayout>
@@ -234,6 +235,7 @@
                     android:layout_height="wrap_content"
                     android:backgroundTint="#00FFFFFF"
                     android:contentDescription="@string/app_name"
+                    android:onClick="onClickRight2"
                     android:scaleType="centerCrop"
                     android:src="@drawable/right" />
             </LinearLayout>
