--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -77,9 +77,11 @@
         android:id="@+id/textView"
         android:layout_width="150dp"
         android:layout_height="55dp"
+        android:layout_marginTop="36dp"
         android:foregroundGravity="center"
         android:gravity="center"
         android:text="Игрок 1"
+        android:textColor="#000000"
         android:textSize="34sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
