--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="Theme.Aaa" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.Aaa" parent="android:Theme.Material.Light.NoActionBar.Fullscreen" />
 </resources>
